// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Link /> renders bold 1`] = `
<Text
  baseline={false}
  bold={true}
  inline={true}
  large={false}
  small={false}
>
  <ButtonOrLink
    className="link-0-2-1"
    href="#"
  >
    Bold
  </ButtonOrLink>
</Text>
`;

exports[`<Link /> renders disabled 1`] = `
<span
  className="text-0-2-7 text_inline-0-2-9"
>
  <ButtonOrLink
    className="link-0-2-1 link_disabled-0-2-6"
    disabled={true}
    href="#"
  >
    Disabled
  </ButtonOrLink>
</span>
`;

exports[`<Link /> renders inverted 1`] = `
<span
  className="text-0-2-7 text_inline-0-2-9"
>
  <ButtonOrLink
    className="link-0-2-1 link_inverted-0-2-4"
    href="#"
  >
    Inverted
  </ButtonOrLink>
</span>
`;

exports[`<Link /> renders large 1`] = `
<span
  className="text-0-2-7 text_inline-0-2-9 text_large-0-2-13"
>
  <ButtonOrLink
    className="link-0-2-1"
    href="#"
  >
    Large
  </ButtonOrLink>
</span>
`;

exports[`<Link /> renders muted 1`] = `
<span
  className="text-0-2-7 text_inline-0-2-9"
>
  <ButtonOrLink
    className="link-0-2-1 link_muted-0-2-5"
    href="#"
  >
    Muted
  </ButtonOrLink>
</span>
`;

exports[`<Link /> renders small 1`] = `
<span
  className="text-0-2-7 text_inline-0-2-9 text_small-0-2-12"
>
  <ButtonOrLink
    className="link-0-2-1"
    href="#"
  >
    Small
  </ButtonOrLink>
</span>
`;
